2006-09-26  Aaron Bockover  <abock@gnome.org>

	* src/Banshee.Base/Dap/DapCore.cs: More fixes; should fix last remaining
	known issues from the new managed HAL migration

2006-09-26  Aaron Bockover  <abock@gnome.org>

	* src/Banshee.Base/Dap/DapCore.cs: Ignore volumes that will not be 
	mounted and ignore disc volumes to keep them from ever being exposed
	as DAPs or going into the volume mount wait queue; remove items from
	the volume mount wait queue if they are physically removed

2006-09-26  Aaron Bockover  <abock@gnome.org>

	* hal-sharp/Manager.cs: Added DeviceAddedArgs and DeviceRemovedArgs as
	in a remove event, the UDI as a device object won't exist

	* src/Banshee.Base/Banshee.Cdrom.Nautilus/NautilusDrive.cs:
	* src/Banshee.Base/Banshee.Cdrom.Nautilus/NautilusDriveFactory.cs:
	* src/Banshee.Base/Dap/DapCore.cs: Updated to use DeviceAdded/RemovedArgs

2006-09-26  Aaron Bockover  <abock@gnome.org>

	hal-sharp has been rewritten on top of the new managed DBus; with this
	commit there is no more native DBus or HAL code in Banshee at all!

	* Makefile.include: Update build settings for new hal-sharp

	* configure.ac: Removed all native DBus/HAL checks and hacks

	* hal-sharp/*.cs: Removed all old hal-sharp binding code; the previous
	hal-sharp was a binding of libhal, and had to use nasty context hacks
	to properly integrate with other contexts and DBus connections inside
	the application/main loop

	* hal-sharp/Connection.cs:
	* hal-sharp/Manager.cs:
	* hal-sharp/Device.cs: New hal-sharp is very simple and implements
	the HAL DBus specification; it integrates cleanly with everything

	* banshee.mds: 
	* hal-sharp/hal-sharp.mdp: Added hal-sharp MonoDevelop project
	
	* hal-sharp/Makefile.am: Updated to build the new hal-sharp

	* src/banshee.exe.config.in:
	* src/Banshee.Dap/Ipod/ipod-sharp.dll.config.in: Removed HAL/DBus maps

	* taglib-sharp/Makefile.am: Build assembly as TagLib.dll instead of
	taglib-sharp.dll

	* libbanshee/Makefile.am: 