@@ -1,3 +1,7 @@
+2006-09-26  James Willcox  <snorp@snorp.net>
+
+	* src/Banshee.Plugins/Daap/daap-sharp/*: update to 0.3.5
+
 2006-09-26  Aaron Bockover  <abock@gnome.org>
 
 	* src/Banshee.Base/Dap/DapCore.cs: More fixes; should fix last remaining
